basic report and bib 2

--- a/report/report.tex
+++ b/report/report.tex
@@ -145,7 +145,7 @@ Prof. Robb McDonald, Department of Mathematics.\\[2em]
 
 \begin{lstlisting}
 /**
-* Prints Hello World. $x_3$
+* Prints Hello World. 
 **/
 #include <stdio.h>
 
